--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ma première page web</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./style/css/normalize.css">
+  <link rel="stylesheet" href="./style/css/style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="#" defer></script>
 </head>
 
@@ -25,7 +26,7 @@
         <ul>
           <!-- TODO est-ce que les liens du menu doivent -->
           <!-- Faire ancre vers les sections -->
-          <li> <a href="#">menu 1</a> </li>
+          <li><a href="#">menu 1</a></li>
           <li><a href="#">menu 2</a></li>
           <li><a href="#">menu 3</a></li>
           <li><a href="#">menu 4</a></li>
@@ -62,30 +63,45 @@
     </main>
 
     <footer>
-      <img src="img/shrek-logo-200x100.png" alt="Logo Shrek">
+      <div class="container__logo">
+        <img src="img/shrek-logo-200x100.png" alt="Logo Shrek" class="logo">
+      </div>
 
-      <nav>
+
+      <!-- Voir comment je vais mettre en responsive -->
+
+      <nav class="menu">
         <ul>
-          <!-- TODO est-ce que les liens du menu doivent -->
-          <li> <a href="#">About us</a> </li>
-          <li><a href="#">Feature</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Career</a></li>
-          <li><a href="#">FAQs</a></li>
-          <li><a href="#">Privacy policy</a></li>
+          <!-- Prettier ignore -->
+          <li class="menu__links"><a href="#"><span class="material-icons">chevron_right</span>About us</a></li>
+          <li class="menu__links"><a href="#"><span class="material-icons">chevron_right</span>Feature</a></li>
+          <li class="menu__links"><a href="#"><span class="material-icons">chevron_right</span>Pricing</a></li>
+          <li class="menu__links"><a href="#"><span class="material-icons">chevron_right</span>Career</a></li>
+          <li class="menu__links"><a href="#"><span class="material-icons">chevron_right</span>FAQs</a></li>
+          <li class="menu__links"><a href="#"><span class="material-icons">chevron_right</span>Privacy policy</a></li>
         </ul>
       </nav>
-      <!-- +/- separateur -->
-      <p>Fait par: Isabelle Langlois</p>
-      <div>
 
-        <img src="img/icons/facebook.png" alt="Logo Facebook">
-        <img src="img/icons/linkedin.png" alt="Logo Linkedin">
-        <img src="img/icons/twitter.png" alt="Logo Twitter">
-        <img src="img/icons/instagram.jpg" alt="Logo Instagram">
+      <div class="separator"></div>
+      <div class="last-line">
+
+
+        <div class="last-line__author">Fait par: Isabelle Langlois</div>
+        <div class="last-line__social">
+
+          <img src="img/icons/facebook.png" alt="Logo Facebook">
+          <img src="img/icons/linkedin.png" alt="Logo Linkedin">
+          <img src="img/icons/twitter.png" alt="Logo Twitter">
+          <img src="img/icons/instagram.jpg" alt="Logo Instagram">
+        </div>
+        <div class="last-line__contact">
+
+          <address href="tel:+15141234567" class="last-line__contact--phone">514-123-4567</address>
+          <img src="img/icons/mail.png" alt="">
+          <address href="mailto:cegep@troisriviere.ca">cegep@troisriviere.ca</address>
+
+        </div>
       </div>
-      <address href="tel:+15141234567">514-123-4567</address>
-      <address href="mailto:cegep@troisriviere.ca">cegep@troisriviere.ca</address>
     </footer>
   </div>
 </body>
