--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- Mettre display none -->
       <h1>Site de Sherk</h1>
       <img src="img/shrek-logo-200x100.png" alt="Logo Shrek">
-      <p>entête avec logo et navigation</p>
+      <p>entête avec logo et navigation...</p>
       <p>navigation responsive</p>
       <p>+/- separateur</p>
       <nav>
@@ -34,9 +34,27 @@
       </nav>
     </header>
     <main>
-      <section>
-        <p>Caroussel de photo</p>
+      <section class="carousel">
+        <div class="carousel__container">
+          <div class="slider">
+            <img src="./img/carousel/shrek-et-chat-potte-1200x500.jpg" alt="Shrek et sa clic" id="img-1">
+            <img src="./img/carousel/shrek-roi-1200x500.webp" alt="Shrek avec une couronne de roi sur la tête"
+              id="img-2">
+            <img src="./img/carousel/fiona-1200x500.jpg" alt="La belle Fiona" id="img-3">
+            <img src="./img/carousel/shrek-famille1200x500.jpg" alt="Shrek et sa famille" id="img-4">
+          </div>
+          <div class="slider__nav">
+            <a href="#img-1"></a>
+            <a href="#img-2"></a>
+            <a href="#img-3"></a>
+            <a href="#img-4"></a>
+          </div>
+
+
+        </div>
+
       </section>
+
       <!-- +/- séparateur -->
       <section>
         <p>slogan / input / boutton</p>
