added gallery section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <main>
     <section class="carousel">
       <div class="carousel__container">
+        <!-- TODO changer img .webp pour jpg -->
         <div class="slider">
           <img src="./img/carousel/shrek-et-chat-potte-1200x500.jpg" alt="Shrek et sa clic" id="img-1">
           <img src="./img/carousel/shrek-roi-1200x500.webp" alt="Shrek avec une couronne de roi sur la tête" id="img-2">
@@ -95,10 +96,33 @@
       <!-- <articles> ou <aside></aside></articles> -->
 
     </section>
-    <section id="gallery">
-      <p>Grid de photos</p>
+
+
+
+    <section class="container" id="gallery">
+      <div class="gallery__container">
+        <div class="gallery__shrek-calin">
+          <img src="./img/gallery/shrek-calin-876x500.jpg" alt="Shrek qui fait un calin à ses chums">
+        </div>
+        <div class="gallery__ane">
+          <img src="./img/gallery/ane-183x275.jpg" alt="L'ane ami de Shrek">
+        </div>
+        <div class="gallery__chat">
+          <img src="./img/gallery/chat-chapeau-300x300.jpg" alt="chat botté prêt à l'attaque">
+        </div>
+        <div class="gallery__fiona">
+          <img src="./img/gallery/fiona-300x300.jpg" alt="Fiona sous forme humaine">
+        </div>
+        <div class="gallery__shrek-ane">
+          <img src="./img/gallery/shrek-ane-500x500.jpg" alt="Shrek et son ami l'ane">
+        </div>
+
+        <div class="gallery__shrek-face">
+          <img src="./img/gallery/shrek-face-504x288.jpg" alt="Gros plan sur la face de Shrek">
+        </div>
+      </div>
     </section>
-    <section id="stats">statistiques</section>
+    <section class="container" id="stats">statistiques</section>
     <section id="cards">Des cards</section>
 
     <section class="contact container" id="contact-us">
