--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <nav class="menu">
       <ul>
-        <li class="menu__links"><a href="#blog">Trucs</a></li>
+        <li class="menu__links"><a href="#blog">Blog</a></li>
         <li class="menu__links"><a href="#gallery">Galerie</a></li>
         <li class="menu__links"><a href="#stats">statistiques</a></li>
-        <li class="menu__links"><a href="#card">Des cards</a></li>
+        <li class="menu__links"><a href="#movies">Films</a></li>
         <li class="menu__links"><a href="#contact-us">Contactez-nous</a></li>
       </ul>
     </nav>
@@ -87,14 +87,50 @@
 
       </div>
     </section>
-    <section id="blog">
-      <p>Gros texte important</p>
-      <p>text</p>
-      <articles>Truc 1</articles>
-      <articles>Truc 2</articles>
-      <articles>Truc 3</articles>
-      <!-- <articles> ou <aside></aside></articles> -->
 
+    <section class="container blogs" id="blog">
+      <h2 class="blogs__title">Blog du marécage</h2>
+
+      <p class="blogs__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi laboriosam
+        necessitatibus voluptate
+        aspernatur
+        iure qui, aperiam exercitationem laborum consectetur dolores, ullam, dolorem suscipit fugit culpa?</p>
+
+      <div class="blogs__container">
+
+        <articles class="blog">
+          <div class="blog__avatar">
+            <img src="./img/avatars/ane-avatar-100.jpg" alt="Avatar de l'ane">
+          </div>
+          <h2 class="blog__title">Conseil d'ami</h2>
+          <p class="blog__text">Mec, il faut prévenir quand t'en lâches un pareil. J'avais la bouche ouverte bordel !
+            - Écoute l'âne, si
+            c'était mon
+            pet, tu serais déja mort !</p>
+          <p class="blog__author">Ane et Shrek</p>
+
+        </articles>
+        <articles class="blog">
+          <div class="blog__avatar"><img src="./img/avatars/shrek-avatar-100.jpg" alt="Avatar de l'ane"></div>
+          <h2 class="blog__title">Clafoutis</h2>
+          <p class="blog__text">Tu sais ce que tout le monde aime ? Le clafoutis. T’as déjà rencontré quelqu’un à qui tu
+            dis : « fais
+            péter le clafoutis
+            ! », et qui te dit, « j’aime pas le clafoutis » ? Il n’y a rien de plus clafoutant que le clafoutis !</p>
+          <p class="blog__author">Shrek</p>
+        </articles>
+        <articles class="blog">
+          <div class="blog__avatar"><img src="./img/avatars/fiona-avatar-100.jpg" alt="Avatar de l'ane"></div>
+          <h2 class="blog__title">Dragon</h2>
+          <p class="blog__text">Vous n'avez point occis le dragon ?
+          </p>
+          <p class="blog__text">Si si, j'occis aussi. Allez, on se dépêche !
+          </p>
+          <p class="blog__author">Fiona et Shrek</p>
+
+        </articles>
+
+      </div>
     </section>
 
 
@@ -123,7 +159,51 @@
       </div>
     </section>
     <section class="container" id="stats">statistiques</section>
-    <section id="cards">Des cards</section>
+
+    <section id="movies">
+      <h2 class="blogs__title">Films</h2>
+
+      <p class="blogs__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi laboriosam
+        necessitatibus voluptate
+        aspernatur
+        iure qui, aperiam exercitationem laborum consectetur dolores, ullam, dolorem suscipit fugit culpa?</p>
+
+      <div class="blogs__container">
+
+        <articles class="blog">
+          <div class="blog__avatar">
+            <img src="./img/avatars/ane-avatar-100.jpg" alt="Avatar de l'ane">
+          </div>
+          <h2 class="blog__title">Conseil d'ami</h2>
+          <p class="blog__text">Mec, il faut prévenir quand t'en lâches un pareil. J'avais la bouche ouverte bordel !
+            - Écoute l'âne, si
+            c'était mon
+            pet, tu serais déja mort !</p>
+          <p class="blog__author">Ane et Shrek</p>
+
+        </articles>
+        <articles class="blog">
+          <div class="blog__avatar"><img src="./img/avatars/shrek-avatar-100.jpg" alt="Avatar de l'ane"></div>
+          <h2 class="blog__title">Clafoutis</h2>
+          <p class="blog__text">Tu sais ce que tout le monde aime ? Le clafoutis. T’as déjà rencontré quelqu’un à qui tu
+            dis : « fais
+            péter le clafoutis
+            ! », et qui te dit, « j’aime pas le clafoutis » ? Il n’y a rien de plus clafoutant que le clafoutis !</p>
+          <p class="blog__author">Shrek</p>
+        </articles>
+        <articles class="blog">
+          <div class="blog__avatar"><img src="./img/avatars/fiona-avatar-100.jpg" alt="Avatar de l'ane"></div>
+          <h2 class="blog__title">Dragon</h2>
+          <p class="blog__text">Vous n'avez point occis le dragon ?
+          </p>
+          <p class="blog__text">Si si, j'occis aussi. Allez, on se dépêche !
+          </p>
+          <p class="blog__author">Fiona et Shrek</p>
+
+        </articles>
+
+      </div>
+    </section>
 
     <section class="contact container" id="contact-us">
       <div class="contact__iframe">
