--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- TODO Faire hamburger -->
     <div class="menu__alt"> X</div>
   </header>
+
   <main>
     <section class="carousel">
       <div class="carousel__container">
@@ -56,7 +57,7 @@
     </section>
 
 
-    <section class=" container">
+    <section class="container">
       <div class="character ">
 
         <p class="character__text">Lorem Corporis Neque ab ad adipisicing amet aperiam aut consectetur cumque dolor
@@ -92,9 +93,8 @@
       <h2 class="blogs__title">Blog du marécage</h2>
 
       <p class="blogs__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi laboriosam
-        necessitatibus voluptate
-        aspernatur
-        iure qui, aperiam exercitationem laborum consectetur dolores, ullam, dolorem suscipit fugit culpa?</p>
+        necessitatibus voluptate aspernatur iure qui,
+        aperiam exercitationem laborum consectetur dolores, ullam, dolorem suscipit fugit culpa?</p>
 
       <div class="blogs__container">
 
@@ -160,46 +160,50 @@
     </section>
     <section class="container" id="stats">statistiques</section>
 
-    <section id="movies">
-      <h2 class="blogs__title">Films</h2>
+    <section class="container movies" id="movies">
+      <h2 class="movies__title">Les film de Shreks</h2>
 
-      <p class="blogs__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi laboriosam
-        necessitatibus voluptate
-        aspernatur
-        iure qui, aperiam exercitationem laborum consectetur dolores, ullam, dolorem suscipit fugit culpa?</p>
+      <p class="movies__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi laboriosam
+        necessitatibus voluptate aspernatur iure qui, aperiam exercitationem laborum consectetur dolores, ullam, dolorem
+        suscipit fugit culpa?</p>
 
-      <div class="blogs__container">
+      <div class="movies__container">
 
-        <articles class="blog">
-          <div class="blog__avatar">
-            <img src="./img/avatars/ane-avatar-100.jpg" alt="Avatar de l'ane">
+        <articles class="movie">
+          <div class="movie__title">
+            <h2>Shrek</h2>
+            <p class="movie__title--caption">2001</p>
           </div>
-          <h2 class="blog__title">Conseil d'ami</h2>
-          <p class="blog__text">Mec, il faut prévenir quand t'en lâches un pareil. J'avais la bouche ouverte bordel !
-            - Écoute l'âne, si
-            c'était mon
-            pet, tu serais déja mort !</p>
-          <p class="blog__author">Ane et Shrek</p>
-
+          <p class="movie__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit mollitia
+            consequuntur illum fugit veniam, harum
+            quos nemo voluptatum blanditiis exercitationem temporibus sit earum ipsam ipsa?</p>
         </articles>
-        <articles class="blog">
-          <div class="blog__avatar"><img src="./img/avatars/shrek-avatar-100.jpg" alt="Avatar de l'ane"></div>
-          <h2 class="blog__title">Clafoutis</h2>
-          <p class="blog__text">Tu sais ce que tout le monde aime ? Le clafoutis. T’as déjà rencontré quelqu’un à qui tu
-            dis : « fais
-            péter le clafoutis
-            ! », et qui te dit, « j’aime pas le clafoutis » ? Il n’y a rien de plus clafoutant que le clafoutis !</p>
-          <p class="blog__author">Shrek</p>
+        <articles class="movie">
+          <div class="movie__title">
+            <h2>Shrek 2</h2>
+            <p class="movie__title--caption">2004</p>
+          </div>
+          <p class="movie__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit mollitia
+            consequuntur illum fugit veniam, harum
+            quos nemo voluptatum blanditiis exercitationem temporibus sit earum ipsam ipsa?</p>
         </articles>
-        <articles class="blog">
-          <div class="blog__avatar"><img src="./img/avatars/fiona-avatar-100.jpg" alt="Avatar de l'ane"></div>
-          <h2 class="blog__title">Dragon</h2>
-          <p class="blog__text">Vous n'avez point occis le dragon ?
-          </p>
-          <p class="blog__text">Si si, j'occis aussi. Allez, on se dépêche !
-          </p>
-          <p class="blog__author">Fiona et Shrek</p>
-
+        <articles class="movie">
+          <div class="movie__title">
+            <h2>Shrek le troisième</h2>
+            <p class="movie__title--caption">2007</p>
+          </div>
+          <p class="movie__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit mollitia
+            consequuntur illum fugit veniam, harum
+            quos nemo voluptatum blanditiis exercitationem temporibus sit earum ipsam ipsa?</p>
+        </articles>
+        <articles class="movie">
+          <div class="movie__title">
+            <h2>Shrek 4 : Il était une fin</h2>
+            <p class="movie__title--caption">2010</p>
+          </div>
+          <p class="movie__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit mollitia
+            consequuntur illum fugit veniam, harum quos nemo voluptatum blanditiis exercitationem temporibus sit earum
+            ipsam ipsa?</p>
         </articles>
 
       </div>
