--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       </div>
     </section>
 
+    <!-- TODO responsive blog -->
     <section class="container blogs" id="blog">
       <h2 class="blogs__title">Blog du marécage</h2>
 
@@ -158,8 +159,10 @@
         </div>
       </div>
     </section>
+
     <section class="container" id="stats">statistiques</section>
 
+    <!-- TODO responsive movies -->
     <section class="container movies" id="movies">
       <h2 class="movies__title">Les film de Shreks</h2>
 
@@ -209,49 +212,54 @@
       </div>
     </section>
 
-    <section class="contact container" id="contact-us">
-      <div class="contact__iframe">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63269.820298437015!2d-71.1871256076971!3d45.50690928648346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cb713c7693858b9%3A0xd2d9a11c5b28acb1!2sMar%C3%A9cage-des-Scots%20Regional%20Park!5e0!3m2!1sfr!2sca!4v1684494730514!5m2!1sfr!2sca"
-          width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <!-- width="600" height="450" -->
+    <section class="container contact" id="contact-us">
 
-      </div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63269.820298437015!2d-71.1871256076971!3d45.50690928648346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cb713c7693858b9%3A0xd2d9a11c5b28acb1!2sMar%C3%A9cage-des-Scots%20Regional%20Park!5e0!3m2!1sfr!2sca!4v1684494730514!5m2!1sfr!2sca"
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <!-- width="600" height="450" -->
 
-      <div class="contact__form">
-        <form class="" id="form" action="confirmation.html" onsubmit="return validateForm()" novalidate>
-          <h3>Contactez-nous</h3>
-          <p>Nous avons hâte d'avoir vos commentaires à propos de la famille de shrek</p>
-          <div class="form__group">
-            <div class=" form__group--width  input-control">
-              <label class="form__label form__label--hidden" for="LastName">Nom de famille</label>
-              <input type="text" id="LastName" name="LastName" placeholder="Nom de famille">
-              <div class="error-message"></div>
-            </div>
-            <div class="form__group--width input-control">
-              <label class="  form__label form__label--hidden" for="firstName">Prénom</label>
-              <input type="text" id="firstName" name="firstName" placeholder="Prénom">
-              <div class="error-message"></div>
-            </div>
-          </div>
-          <div class="form__group input-control">
-            <label class="form__label form__label--hidden" for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Email">
+
+      <form class="contact__form" id="form" action="confirmation.html" onsubmit="return validateForm()" novalidate>
+        <h3>Contactez-nous</h3>
+        <p>Nous avons hâte d'avoir vos commentaires à propos de la famille de shrek</p>
+
+        <div class="form__group form__group--row">
+
+          <div class="form__group--width  input-control form__group--margin-right">
+            <label class="form__label form__label--hidden" for="LastName">Nom de famille</label>
+            <input type="text" id="LastName" name="LastName" placeholder="Nom de famille">
             <div class="error-message"></div>
           </div>
-          <div class="form__group input-control">
-            <label class="form__label form__label--hidden" for="message">Message</label>
-            <textarea id="message" name="message" placeholder="Message"></textarea>
+
+          <div class="form__group--width input-control form__group--margin-top">
+            <label class="  form__label form__label--hidden" for="firstName">Prénom</label>
+            <input type="text" id="firstName" name="firstName" placeholder="Prénom">
             <div class="error-message"></div>
           </div>
-          <div class="form__submit">
-            <input type="submit" value="Soumettre">
-          </div>
-          <!-- TODO terminer validation -->
-          <!-- TODO faire page html confirmation ou message dans cette page -->
-        </form>
-      </div>
+
+        </div>
+
+        <div class="form__group input-control">
+          <label class="form__label form__label--hidden" for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Email">
+          <div class="error-message"></div>
+        </div>
+
+        <div class="form__group input-control">
+          <label class="form__label form__label--hidden" for="message">Message</label>
+          <textarea id="message" name="message" placeholder="Message"></textarea>
+          <div class="error-message"></div>
+        </div>
+
+        <div class="form__submit">
+          <input type="submit" value="Soumettre">
+        </div>
+        <!-- TODO terminer validation -->
+        <!-- TODO faire page html confirmation ou message dans cette page -->
+      </form>
+
+
     </section>
 
   </main>
